--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header block__size">
       <a class="header__logo">&lt;/html&gt;</a>
       <h1 class="header__title">закрывающий тег</h1>
-      <nav class="theme-menu header__theme-menu">
+      <nav class="theme-menu header__theme-menu"></nav>
     </header>
     <main>
 
@@ -506,12 +506,12 @@
         </button>
 
         <dialog id="modal">
-          <symbol class="modal-container">
+          <div class="modal-container">
             <svg class="floppy-icon modal-icon" width="100%" height="100%" viewBox="0 0 39 39">
               <use href="./svg/floppy.svg#floppy"></use>
             </svg>
             <p class="modal-text">вставьте<br>дискету, чтобы<br>продолжить</p>
-          </symbol>
+          </div>
           <form  class="modal-form" method="dialog">
             <button class="button modal-button" type="submit">
               <span class="button__text">OK</span>
