--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
     <main>
       <ul class="cards-list">
+
         <li class="card block__size">
           <h2 class="card__title">
             Фритрек и нулевой спринт: Подготовка к работе
@@ -44,6 +45,7 @@
             <div class="card__buttons">
               <button class="card__icon-button" type="button">
                 <svg
+                  class="like-icon"
                   width="39"
                   height="36"
                   viewBox="0 0 39 36"
